# fhtw-discord-bot

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
fhtw-db/model/: discord_user.py
fhtw-db/services/: user_repository_manager.py
fhtw-discord-bot/: main.py
